<resources>
    <string name="app_name">FantasyForestMaze</string>
    <string name="score_format">Score: %1$d</string>
    <string name="time_format">Time: %1$d s</string>
    <string name="score_default">Score: 0</string>
    <string name="time_default">Time: 30s</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_restart">Restart</string>

</resources>