<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Score and Timer -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/score_default"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/time_default"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Maze View -->
    <com.example.fantasyforestmaze.MazeView
        android:id="@+id/mazeView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Buttons for controlling player -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/buttonUp"
            android:text="@string/button_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/buttonLeft"
            android:text="@string/button_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/buttonRight"
            android:text="@string/button_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Button.Borderless" />
        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_restart"
            android:visibility="gone"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonDown"
            android:text="@string/button_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Button.Borderless" />
    </LinearLayout>
</LinearLayout>
